# docuseal-x

./: .env.local  .env.local.example  Dockerfile  Gemfile  README.md  deploy-local.sh  docker-compose-dokploy.yml  docker-compose.local.yml  package.json  simple_contract.pages  simple_contract_template.docx  tailwind.config.js
app/controllers/: accounts_controller.rb  application_controller.rb  consent_settings_controller.rb  errors_controller.rb  esign_settings_controller.rb  folder_accesses_controller.rb  licenses_controller.rb  pages_controller.rb  personalization_settings_controller.rb  phone_otp_settings_controller.rb  setup_controller.rb  submit_form_consent_controller.rb  submit_form_controller.rb  submit_form_phone_2fas_controller.rb  template_accesses_controller.rb  templates_preferences_controller.rb
app/javascript/: application.js  application.scss  form.js  form.scss
app/jobs/: license_heartbeat_job.rb  send_phone_otp_webhook_job.rb  send_submitter_invitation_webhook_job.rb  send_test_webhook_request_job.rb
app/mailers/: application_mailer.rb
config/: application.rb  phosphor_name_map.yml  routes.rb
docs/: API.md  TEMPLATE_TAGS.md  openapi.json
docs/api/: go.md  (+10 more)
docuseal_data/: db.sqlite3
lib/: ability.rb  accounts.rb  docuseal.rb  pdfium.rb  phone_verification_codes.rb  send_webhook_request.rb  submitters.rb  text_utils.rb
pdf_extractor/: Dockerfile  app.py  requirements.txt
pdf_tag_remover/: Cargo.toml  Dockerfile
pdf_tag_remover/src/: main.rs
public/: service-worker.js
script/: migrate_vue_icon_imports.rb  rebuild_icon_partials.rb
(+304 files in other folders)
