[package]
name = "pdf_tag_remover"
version = "0.1.0"
edition = "2021"

[dependencies]
lopdf = "0.34"
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
regex = "1"

[profile.release]
opt-level = 3
lto = true
