[package]
name = "pdf_tag_remover"
version = "0.1.0"
edition = "2021"

[dependencies]
lopdf = "0.33"
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.10"
log = "0.4"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
